<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_activite1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_button" />

    <EditText
        android:id="@+id/editNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_saisie"
        android:inputType="text"
        android:layout_marginTop="12dp" />

    <FrameLayout
        android:id="@+id/zoneTouch"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zone_touch" />
    </FrameLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultat_vide"
        android:textSize="18sp"
        android:textAlignment="center"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnMeteo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aller_meteo"
        android:layout_marginTop="24dp" />

</LinearLayout>
